package pl.edu.agh.evolutus.genome.gene;

public interface Gene<V> {

	V getValue();
}
